--- a/main.css
+++ b/main.css
@@ -162,6 +162,7 @@ html{
     font-family: 'Bangers', cursive;
     font-size: 30px;
 }
+
 footer{
     text-align: center;
     bottom: 0;
@@ -186,4 +187,64 @@ footer h1{
     background-color: white;
     border-radius: 35px;
     border: 2px black solid;
+}
+@media all and (max-width: 700px){
+    .navbar ul, .navbar a{
+        background-color: transparent;
+        color: transparent;
+    }
+    .row-1, .row-1 h1{
+        font-size: 50px;
+        padding-bottom: 20px;
+    }
+    .row-1 ul a{
+        font-size: 10px;
+        padding: 0;
+    }
+    .row-2, .row-2 h1{
+        font-size: 50px;
+        padding: 0;
+    }
+    .row-2 a{
+        font-size: 15px;
+        
+    }
+    .row-3, .row-3 h1{
+        font-size: 50px;
+        padding: 0;
+    }
+    .row-3 ul a{
+        font-size: 10px;
+        padding: 0;
+    }
+    .row-3 img{
+        width: 300px;
+        height: 300px;
+    }
+    .row-3 iframe{
+        width: 350px;
+        height: 400px;
+    }
+    .row-4 h1{
+        font-size: 50px;
+        padding 0;
+    }
+    .row-5 h1{
+        font-size: 50px;
+        padding: 0;
+    }
+    .row-5 h5{
+        font-size: 20px;
+        padding-top: 20px;
+    }
+    .row-6 h1{
+        font-size: 50px;
+        padding: 0;
+    }
+    .row-6 p{
+        font-size: 20px;
+    }
+    footer h1{
+        font-size: 50px;
+    }
 }
