responsive design amendment

--- a/main.css
+++ b/main.css
@@ -243,6 +243,7 @@ footer h1{
     }
     .row-6 p{
         font-size: 20px;
+        padding: 0 0;
     }
     footer h1{
         font-size: 50px;
